Add routes for samples and samplebyid; Update route sample by geosetting: refer to other routes for choice options
